Added meta tags and logo for favicon

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#111111" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Intrepide is your new home in boutique wellness. We join the dependable standards of Pilates with forefront development to give you the most out of each exercise."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="author" content="Jericho P. Bantiquete" />
+    <meta name="copyright" content="Jericho P. Bantiquete" />
+    <meta
+      name="keywords"
+      content="gym website, react projects, fitness website, gym fitness website, jericho bantiquete"
+    />
+    <meta property="og:url" content="https://intrepide.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Intrepide" />
+    <meta
+      property="og:description"
+      content="Intrepide is your new home in boutique wellness. We join the dependable standards of Pilates with forefront development to give you the most out of each exercise."
+    />
+    <meta property="og:image" content="https://i.imgur.com/W0m79H0.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@monciego" />
+    <meta property="twitter:url" content="https://intrepide.netlify.app/" />
+    <meta name="twitter:title" content="Intrepide" />
+    <meta
+      name="twitter:description"
+      content="Intrepide is your new home in boutique wellness. We join the dependable standards of Pilates with forefront development to give you the most out of each exercise."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/W0m79H0.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,900;1,700&family=Montserrat:wght@400;500;600;700&display=swap"
