refactor: moved from create-react-app to vite

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#111111" />
     <meta
@@ -32,8 +32,7 @@
       content="Intrepide is your new home in boutique wellness. We join the dependable standards of Pilates with forefront development to give you the most out of each exercise."
     />
     <meta name="twitter:image" content="https://i.imgur.com/W0m79H0.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,900;1,700&family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -42,5 +41,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
